TransactionService/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transactionservice
  namespace: apis
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /transaction(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: transactionservice
                port:
                  number: 80
